hsr.scss
/* ... */
.post-navigation .post-title {
    font-family: $main-font;
    font-weight: 300;
}
@media screen and (max-width: 910px) {
    .blog article {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;
        .blog-thumb {
            width: 100%;
            img {
                width: 100%;
            }
            .posted-on {
                text-align: left;
                padding-left: $margin-7;
                margin-bottom: 1em;
            }
            span.cat-links,
            span.comments-link {
                display: inline-block;
                margin-right: 1em;
                margin-bottom: 1em;
            }
            span.cat-links {
                margin-left: $margin-7;
            }
        }
        .entry-content p {
            margin-right: $margin-7;
            padding-right: $margin-7;
        }
    }
}
@media screen and (max-width: 600px) {
    .entry-content {
        padding-right: 4em;
    }
}

/*--------------------------------------------------------------
4    Footer
--------------------------------------------------------------*/
.testimonials {
    background: $paleblue;
    padding: 4.5455% 4.5455% 10%;
    text-align: center;
    p {
        margin-bottom: 0.5em;
        line-height: 1.2;
    }
    .quote {
        font-size: 1.5em;
    }
    blockquote {
        color: $darkblue;
        padding-bottom: 0;
        margin-bottom: 0;
        p {
            padding-top: 30px;
            text-align: left;
            line-height: 1.4;
        }
        .open-quote {
            font-size: 5em;
            float: left;
            margin-right: 15px;
            margin-top: -12px;
            line-height: 1;
        }
        .close-quote {
            display: none;
        }
    }
.testimonials-widget-testimonial cite,
.testimonials-widget-testimonial div.credit {
        text-align: center;
        line-height: 0;
    }
.testimonials-widget-testimonial cite:before,
.testimonials-widget-testimonial div.credit:before {
        content: '';
    }
}
.site-footer a:link,
.site-footer a:visited {
    color: white;
}
.site-footer a:hover,
.site-footer a:active {
    color: $green;
}
.site-footer .social-links-menu a {
    color: white;
    border-color: white;
    width: 33px;
    height: 33px;
}
.site-footer .social-links-menu a:before {
    width: 28px;
    height: 28px;
    line-height: 28px;
}
.site-footer .social-links-menu a:hover,
.site-footer .social-links-menu a:hover:before {
    color: $green;
    border-color: $green;
}
.site-footer {
    color: white;
    background: $darkgrey;
    padding: 1em 4.5455% 4.5455%;
    position: relative;
}
.site-footer:before {
    position: absolute;
    background: $darkgrey;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    -webkit-transform: skewY(1.5deg);
            transform: skewY(1.5deg);
    -webkit-transform-origin: bottom right;
            transform-origin: bottom right;
    content: '';
}
.footer-wrap.site-inner {
    /* display: -webkit-box;
    display: -ms-flexbox;
    display: flex; */
}
.site-footer ul li {
    display: inline-block;
}
nav.footer-navigation,
.footer-extras {
    width: 48%;
    -webkit-box-flex: 1;
        -ms-flex: 1;
            flex: 1;
}
.extras-r1,
.extras-r2 {
    -webkit-box-flex: 0 0 100%;
        -ms-flex: 0 0 100%;
            flex: 0 0 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
}
nav.footer-navigation li {
    width: 50%;
    float: left;
    padding: 5px 0;
    line-height: 1;
}
ul.footer-menu {
    margin-left: 0;
}
.footer-extras {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
}
.site-footer .social-navigation {
    -webkit-box-ordinal-group: 1;
        -ms-flex-order: 0;
            order: 0;
}
.site-details {
    margin-top: 3em;
}
.footer-info a img {
    float: left;
    width: 160px;
    margin-right: 20px;
}
.site-info {
    position: relative;
    z-index: 30;
    color: white;
}
/*--------------------------------------------------------------
5    Widgets
--------------------------------------------------------------*/
.widget {
    border-top: none;
}
.widget .widget-title {
    font-family: $main-font;
    letter-spacing: 0;
}
/* 5.1  Metaslider */
.entry-content #metaslider_135.flexslider .slides li {
    margin-right: 0 !important;
}
.metaslider .flexslider .flex-direction-nav .flex-prev,
.metaslider .flexslider .flex-direction-nav .flex-next {
    margin-top: -15px !important;
}

/*--------------------------------------------------------------
6    Elementor
--------------------------------------------------------------*/
.elementor-column-gap-default>.elementor-row>.elementor-column>.elementor-element-populated {
    padding: 0;
}
.entry-content .elementor hr {
    background-color: $lightgrey;
}
/*--------------------------------------------------------------
7   Scrollup
--------------------------------------------------------------*/
a#scrollup {
    background-color: $green;
    color: #fff;
    display: none;
    -webkit-font-smoothing: antialiased;
    font: normal 24px/1 'fontawesome';
    padding: 0 10px 5px;
    position: fixed;
    right: 20px;
    bottom: 42px;
    text-decoration: none;
    vertical-align: top;
    opacity: 0.9;
    filter:alpha(opacity=80); /* For IE8 and earlier */
    z-index: 999;
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
}
a#scrollup:before {
    content: '\f0d8';
}
a#scrollup:hover {
    opacity: 1;
    filter:alpha(opacity=100); /* For IE8 and earlier */
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
}
/* ... */

